# QtExtra

./: .gitignore
qtextra/: CMakeLists.txt  qtextra.pro
qtextra/examples/: CMakeLists.txt  examples.pro
qtextra/examples/animatedwizard/: CMakeLists.txt  main.cpp
qtextra/examples/codeeditor/: CMakeLists.txt  codeeditor.pro  mainwindow.cpp
qtextra/examples/colorwidgets/: CMakeLists.txt  mainwindow.cpp
qtextra/examples/configwidget/: CMakeLists.txt  mainwindow.cpp
qtextra/examples/itemdelegatedemo/: CMakeLists.txt  mainwindow.cpp
qtextra/examples/itemviewdemo/: CMakeLists.txt  mainwindow.cpp
qtextra/examples/objectmapper/: CMakeLists.txt  mainwindow.cpp
qtextra/examples/objectviewer/: CMakeLists.txt  mainwindow.cpp
qtextra/examples/qtanimatedwizard/: CMakeLists.txt  main.cpp  qtanimatedwizard.pro
qtextra/examples/sqlutils/: CMakeLists.txt  mainwindow.cpp
qtextra/qtextraaux/: CMakeLists.txt
qtextra/qtgeometry/: CMakeLists.txt
qtextra/qtwidgetsextra/: CMakeLists.txt  qtwidgetsextra.pri  qtwidgetsextra.pro
qtextra/qtwidgetsextra/include/: QtSlideController  QtWidgetsExtra
qtextra/qtwidgetsextra/src/: qtwidgetsextra.h
qtextra/qtwidgetsextra/src/utils/: qtcursoreventfilter.cpp  qtcursoreventfilter.h  qtscreendprhandler.cpp  qtscreendprhandler.h  qtwindowframecontroller.cpp  qtwindowframecontroller.h
qtextra/qtwidgetsextra/src/widgets/: qtslidecontroller.cpp  qtslidecontroller.h
